@@ -11,7 +11,6 @@ tasks (marked with * are necessary for next release)
  [ 1 ] make highrestimer clock configurable
  [ 4 ] profile different methods of hook activation / deactivation
  [ 2 ] add a testsuite
- [*8 ] print not-freed memory in memprofile
 
 questions
  [ 5 ] Why does addr2line do some black magic on elf addresses
